# 2D-3D-Heat-Dissipation-CUDA

2D-3D-Heat-Flow-CUDA-master/2D-3D-Heat-Flow-CUDA-master/: CMakeLists.txt  README.md  heatOutput.csv  sample.conf
2D-3D-Heat-Flow-CUDA-master/2D-3D-Heat-Flow-CUDA-master/src/: heat2D3D.cu
